[package]
name = "hpke-rs-libcrux"
version = "0.6.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-libcrux"
description = "Crypto backend for HPKE using formally verified code from libcrux."
readme = "Readme.md"
repository = "https://github.com/cryspen/hpke-rs"

[dependencies]
hpke-rs-crypto.workspace = true
libcrux-ecdh.workspace = true
libcrux-hkdf.workspace = true
libcrux-kem.workspace = true
libcrux-aead.workspace = true
libcrux-traits.workspace = true
# Randomness
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
deterministic-prng = [] # ⚠️ FOR TESTING ONLY.
std = [
    "rand/std",
    "rand_chacha/std",
    "libcrux-ecdh/std",
    "libcrux-kem/std",
    "hpke-rs-crypto/std",
]

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_p256"
harness = false

[[bench]]
name = "bench_x25519"
harness = false
