[package]
name = "hpke-rs-rust-crypto"
version = "0.6.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-rust-crypto"
description = "Crypto backend for HPKE using native Rust crypto."
readme = "Readme.md"
repository = "https://github.com/cryspen/hpke-rs"

[dependencies]
hpke-rs-crypto.workspace = true
# Rust crypto
hkdf.workspace = true
sha2.workspace = true
p256.workspace = true
k256.workspace = true
p384.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
# Post-quantum KEMs
x-wing.workspace = true
ml-kem.workspace = true
# Randomness
getrandom.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
zeroize.workspace = true
subtle.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
std = ["rand/std"]
deterministic-prng = [
    "hpke-rs-crypto/std",
] # ⚠️ FOR TESTING ONLY.

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_p256"
harness = false

[[bench]]
name = "bench_k256"
harness = false

[[bench]]
name = "bench_x25519"
harness = false
