[package]
name = "hpke-rs-crypto"
version = "0.6.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition.workspace = true
rust-version.workspace = true
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-crypto"
description = "Traits and types for HPKE crypto backends"
readme = "Readme.md"
repository = "https://github.com/cryspen/hpke-rs"

[dependencies]
serde = { workspace = true, optional = true }
rand_core.workspace = true
zeroize.workspace = true

[features]
serde = ["dep:serde"]
std = []
